# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
diff/: file1.json  file2.json
diff/scripts/: finding_diff.py  gendiff.py  parser.py
tests/: test_finding_diff.py
